--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper">
     <header class="header">
         <mat-toolbar class="toolbar">
-            <span><img src="../../assets/images/logo2.png" alt="logo" width="170px" height="100px"></span> <!--<img _ngcontent-yff-c30="" src="../../assets/images/logo2.png" alt="logo" width="170px" height="100px">-->
+            <div class="logo">
+                <a href="#"><img src="../../assets/images/logo4.png" alt="logo"/></a>
+            </div>
             <!-- <nav class="navBar">
                 <span>My Nav Bar</span>
             </nav> -->
@@ -12,21 +14,34 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a href="#">Category</a>
                         </li>
                         <li class="nav-item">
                             <a href="#">Popular</a>
                         </li>
                         <li class="nav-item">
+                            <div class="nav-block-bar">|</div>
+                        </li>
+                        <li class="nav-item" *ngIf="isAuthenicate">
                             <a href="#">My Profile</a>
+                        </li>
+                        <li class="nav-item" *ngIf="!isAuthenicate">
+                            <a href="#">Sign In</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </mat-toolbar>
-
     </header>
+    <div class="qoute">
+        <h1>"Increase your knowledge by getting books here."</h1>
+        <p class="qoute-des">Join 150,000+ sci-fi, fantasy, and horror fans and read to 100+ exclusives and bestsellers on our app.</p>
+        <div class="sign-up">
+            <a href="#">
+                <div><b>Click here to Sign Up</b></div>
+            </a>
+        </div>
+        <div class="qoute-bg-img">
+        </div>
+    </div>
 </div>
