Changes of dashboard, view book, review and search UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,21 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.icon {
+    width: 20px;
+    height: 20px;
+}
+.logo{
+    margin-left: 6%;
+    margin-top: 1%;
+}
+.logo-img {
+    width: 130px;
+    height: 60px;
+}
+.wrapper {
+    background-color: black;
+    max-height: 100%;
+    max-width: auto;
+    overflow: auto;
+}
