--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,60 +1,8 @@
-.wrapper {
-    background-color: black;
-    max-height: 100%;
-    max-width: auto;
-    overflow: auto;
-    /* margin-top: -3%; */
-}
-.header {
-    background-color: black; 
-    height: 80px;
+/* .header {
     width: 90%;
-    position: fixed;
-}
-.toolbar {
-    background-color: black; 
-    color: #b3b3b3;
-    max-width: 12000px;
-    margin: 0 auto;
-    padding: 12px 0;
-}
-.logo{
-    margin-left: 6%;
-    margin-top: 1%;
-}
-.toolbar img {
-    width: 130px;
-    height: 60px;
-}
-.navbar-nav {
-    margin: auto;
-    padding-top: 4%;
-}
-.navBar{
-    display: block;
-    text-align: right;
-    width: 30%;
+} */
+.navBar {
     margin-left: 60%;
-    font-size: 1rem;
-}
-.nav-item {
-    text-align: center;
-    vertical-align: bottom;
-}
-.nav-item a {
-    
-    font-weight: bold;
-    color: #b3b3b3;
-    padding: 0px 16px;
-    margin: auto;
-    text-decoration: none;
-}
-.nav-item a:hover:not(.active) {
-    /* background-color: chocolate; */
-    color: white;
-}
-.nav-block-bar {
-    display: inline-block;
 }
 .qoute{
     background-color: black;
@@ -90,7 +38,6 @@
     height: 60px;
     margin-top: 2%;
     opacity: 1;
-    z-index: 100;
 }
 .sign-up a {
     text-decoration: none;
@@ -110,7 +57,6 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     opacity: 0.5;
-    z-index: -1;
 
 }
 .qoute-bg-img img {
@@ -118,7 +64,6 @@
     width: 100%;
     height: 100%;
     opacity: 0.5;
-    z-index: 1;
 }
 @media screen and (min-width: 1280px) {
     .qoute h1 {
@@ -129,4 +74,61 @@
         font-size: 24px;
         line-height: 32px;
     }
+}
+.genre-search {
+    background-color: black;
+    width: 100%;
+    color: white;
+}
+.genre-search-heading {
+    margin-bottom: 2%;
+    text-align: center;
+    font-size: 2rem;
+    line-height: 20px;
+    font-weight: bold;
+}
+.icon {
+    width: 20px;
+    height: 20px;
+}
+.genres {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    padding: auto;
+    width: 30%;
+    margin-bottom: 1%;
+}
+.genre-link {
+    text-decoration: none;
+    cursor: pointer;
+    border: 1px solid white;
+    border-radius: 32px;
+    padding: 5px 25px;
+    margin: auto;
+    color: white;
+}
+.genre-link:hover:not(.active) {
+    background-color: white;
+    color:black;
+}
+.genres-example-list {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 2%;
+}
+.genre-example {
+    position: relative;
+    display: flex;
+    height: 60%;
+    width: 60%;
+    align-items: center;
+    margin-right: 5;
+    padding: auto;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+}
+.genre-card {
+    background-color: #baf5ea;
 }
