--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,39 +1,6 @@
 <div class="wrapper">
-    <header class="header">
-        <mat-toolbar class="toolbar">
-            <div class="logo">
-                <a href="#"><img src="../../assets/images/logo4.png" alt="logo"/></a>
-            </div>
-            <!-- <nav class="navBar">
-                <span>My Nav Bar</span>
-            </nav> -->
-            <nav class="navbar navbar-expand-md navBar">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="#">Category</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#">Popular</a>
-                        </li>
-                        <li class="nav-item">
-                            <div class="nav-block-bar">|</div>
-                        </li>
-                        <li class="nav-item" *ngIf="isAuthenicate">
-                            <a href="#">My Profile</a>
-                        </li>
-                        <li class="nav-item" *ngIf="!isAuthenicate">
-                            <a href="#">Sign In</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </mat-toolbar>
-    </header>
-    <div class="qoute">
+    <app-header></app-header>
+    <section class="qoute">
         <h1>"Increase your knowledge by getting books here."</h1>
         <p class="qoute-des">Join 150,000+ sci-fi, fantasy, and horror fans and read to 100+ exclusives and bestsellers on our app.</p>
         <div class="sign-up">
@@ -43,5 +10,40 @@
         </div>
         <div class="qoute-bg-img">
         </div>
-    </div>
+    </section>
+    <section class="genre-search">
+        <h3 class="genre-search-heading">Discover something for you</h3>
+        <h3 style="text-align: center;">Select a Genre</h3>
+        <div class="genres">
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'fiction' }" class="genre-link">Fiction</a>
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'fantasy' }" class="genre-link">Fantasy</a>
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'horror' }" class="genre-link">Horror</a>
+        </div>
+        <div class="genres" style="width: 38%;">
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'action & adventure' }" class="genre-link">Action & Adventure</a>
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'mystery' }" class="genre-link">Mystery</a>
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'thriller' }" class="genre-link">Thriller</a>
+        </div>
+        <div class="genres-example-list">
+            <div class="genre-example" *ngFor="let book of categoryBooks">
+                <mat-card class="example-card genre-card">
+                    <mat-card-header>
+                        <mat-card-title matTooltip="{{ book?.volumeInfo?.title }}">{{ book?.volumeInfo?.title?.length > 25 ? book?.volumeInfo?.title.substr(0, 25) + "..." : book?.volumeInfo?.title }}</mat-card-title>
+                        <mat-card-subtitle>{{ book?.volumeInfo?.authors[0] }}</mat-card-subtitle>
+                    </mat-card-header>
+                    <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.volumeInfo?.industryIdentifiers[0].identifier }"><img mat-card-image src="{{ book?.volumeInfo?.imageLinks?.thumbnail }}" alt="Book cover" height="250px"></a>
+                    <mat-card-content>
+                        <p>
+                            {{ book?.volumeInfo?.description.substr(0, 65) + "..." }} <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.volumeInfo?.industryIdentifiers[0].identifier }">Show more</a>
+                        </p>
+                    </mat-card-content>
+                    <!-- <mat-card-actions>
+                        <button mat-button>LIKE</button>
+                        <button mat-button>SHARE</button>
+                    </mat-card-actions> -->
+                </mat-card>
+            </div>
+        </div>
+    </section>
+    <app-footer></app-footer>
 </div>
