--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<app-login></app-login>
-<app-register></app-register>
-<router-outlet></router-outlet>
+
+   
+    <!-- <div>
+
+        <mat-grid-list cols="2"></mat-grid-list> -->
+           
+    
+<!--    
+    </div> -->
+    <router-outlet></router-outlet>
+
+
