--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -47,7 +47,7 @@
 }
 
 body{
-	background-image:url(../images/download.jpg) no-repeat center center fixed; 
+	background-image:url(../../assets/download.jpg) no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
