--- a/src/app/search-book/search-book.component.css
+++ b/src/app/search-book/search-book.component.css
@@ -18,3 +18,11 @@
 .genre-card {
     background-color: #baf5ea;
 }
+.content {
+    margin-top: 7%;
+    padding: 16px;
+}
+
+.content > mat-card {
+    width: 200px;
+}
