Register success changes

--- a/src/app/register-success/register-success.component.html
+++ b/src/app/register-success/register-success.component.html
@@ -1,1 +1,16 @@
-<p>register-success works!</p>
+
+<div class="body" >
+<div class="jumbotron jumbotron fluid">
+    <div class="container">
+    <h1 class="display-4" style="text-align: center">You have Registered Succesfully!</h1>
+    <br>
+    <p class="lead "> For the Activation link head towards your mailbox and click on the link to activate your account.</p>
+    <hr class="my-4">
+    <p> 
+        U can enjoy reading as many books as u want on BookSpot of your favourite category and genre.
+        Read and Explore Activate the link to have a wonderful 
+        experience at Bookspot!
+    </p>
+   </div>
+  </div>
+</div>
