--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,16 +23,16 @@
                     <h5 class="text-uppercase">Connect</h5>
                     <ul class="list-unstyled">
                     <li>
-                        <a href="#!"><img src="../../assets/icon/facebook-brands.svg" alt="facebook" class="icon">Facebook</a>
+                        <a href="#!"><img src="../../assets/icon/facebook-brands.svg" alt="facebook" class="icon_img">Facebook</a>
                     </li>
                     <li>
-                        <a href="#!"><img src="../../assets/icon/instagram.svg" alt="instagram" class="icon"/>Instagram</a>
+                        <a href="#!"><img src="../../assets/icon/instagram.svg" alt="instagram" class="icon_img"/>Instagram</a>
                     </li>
                     <li>
-                        <a href="#!"><img src="../../assets/icon/twitter-square-brands.svg" alt="twitter" class="icon"/>Twitter</a>
+                        <a href="#!"><img src="../../assets/icon/twitter-square-brands.svg" alt="twitter" class="icon_img"/>Twitter</a>
                     </li>
                     <li>
-                        <a href="#!"><img src="../../assets/icon/youtube-brands.svg" alt="youtube" class="icon"/>Youtube</a>
+                        <a href="#!"><img src="../../assets/icon/youtube-brands.svg" alt="youtube" class="icon_img"/>Youtube</a>
                     </li>
                 </ul>
             </div>
