--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
                         <a href="#">My Profile</a>
                     </li>
                     <li class="nav-item" *ngIf="!isAuthenicate">
-                        <a href="#">Sign In</a>
+                        <a href="login">Sign In</a>
                     </li>
                 </ul>
             </div>
