--- a/src/app/register-success/register-success.component.html
+++ b/src/app/register-success/register-success.component.html
@@ -4,12 +4,12 @@
     <div class="container">
     <h1 class="display-4" style="text-align: center">You have Registered Succesfully!</h1>
     <br>
-    <p class="lead "> For the Activation link head towards your mailbox and click on the link to activate your account.</p>
+    <p class="lead " style="text-align: center">“Reading is essential for those who seek to rise above the ordinary.” – Jim Rohn</p>
     <hr class="my-4">
     <p> 
-        U can enjoy reading as many books as u want on BookSpot of your favourite category and genre.
-        Read and Explore Activate the link to have a wonderful 
-        experience at Bookspot!
+        For the Welcome mail from BookSpot head towards your mailbox and enjoy reading and learning!
+     Read as many books as you want  of your favourite category and genre on BookSpot! Enhance your vocubulary and making reading a part of your life.
+     Pick a book of your choice and enjoy reading!
     </p>
    </div>
   </div>
