--- a/src/app/recommendation/recommendation.component.html
+++ b/src/app/recommendation/recommendation.component.html
@@ -2,18 +2,20 @@
   <app-header></app-header>
   <div class="content">
       <div fxLayout="row wrap" fxLayoutGap="16px grid">
-          <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let book of categoryBooks">
+          <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let book of recommendedBooks">
               <mat-card class="mat-elevation-z4">
                   <mat-card-header>
-                      <mat-card-title matTooltip="{{ book?.volumeInfo?.title }}">{{ book?.volumeInfo?.title?.length > 25 ? book?.volumeInfo?.title.substr(0, 25) + "..." : book?.volumeInfo?.title }}</mat-card-title>
-                      <mat-card-subtitle>{{ book?.volumeInfo?.authors[0] }}</mat-card-subtitle>
+                      <mat-card-title matTooltip="{{ book?.bookName }}">{{ book?.bookName.length > 25 ? book?.bookName.substr(0, 25) + "..." : book?.bookName }}
+
+                      </mat-card-title>
+                      <mat-card-subtitle>{{ book?.volumeInfo?.authors[0] }}&nbsp;&nbsp;&nbsp;-recommended by {{book.username}}</mat-card-subtitle>
                   </mat-card-header>
                   <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.volumeInfo?.industryIdentifiers[0].identifier }">
-                      <img mat-card-image src="{{ book?.volumeInfo?.imageLinks?.thumbnail }}" alt="Book cover" height="250px">
+                      <img mat-card-image src="{{ book?.bookImg }}" alt="Book cover" height="250px">
                   </a>
                   <mat-card-content>
                       <p>
-                          {{ book?.volumeInfo?.description.substr(0, 55) + "..." }} <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.volumeInfo?.industryIdentifiers[0].identifier }">Show more</a>
+                          {{ book?.bookDesc.substr(0, 55) + "..." }} <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.bookDesc }">Show more</a>
                       </p>
                   </mat-card-content>
                   <!-- <mat-card-actions>
