--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#">Category</a>
+                        <a [routerLink]="['/search']">Explore</a>
                     </li>
                     <li class="nav-item">
                         <a href="#">Popular</a>
