--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,37 @@
-<p>about-us works!</p>
+<app-header></app-header>
+<header>
+    <h1 class="name" style="color: aliceblue;">About BookSpot </h1> 
+</header>
+
+<body>
+    <div class ="about">
+        <section style="color: rgb(255, 240, 245);" id="about">
+           <br>
+            <h2 style="text-align: justify" style="color: azure;" style="font-style: italic"> 
+                BookSpot delivers the best stories of different categories for reading. Switch between reading with a single click. We deliver bite-sized stories—dramas,thrillers, 
+                comedy, sci-fi/fantasy, non-fiction and more—to fit your day. Perfect for busy fans of ebooks </h2>
+               
+                <hr>
+        <p>
+        Welcome to world of BookSpot! BookSpot is all about books and making reading a a part of your life.
+        While technology has rapidly evolved, the way publishers and writers bring books to readers really hasn't.
+        Storytelling in TV has become more sophisticated and multilayered, podcasts have risen to mainstream media status—but ebooks are just books on 
+        digital devices, easier, more fun.
+        BookSpot is here to change all of that: artfully blending together the best of series television and the convenience of ebooks and audiobooks to bring readers a new form of story telling.
+        Releasing fiction series,Thriller stories and Inspirational stuff and many more categories. BookSpot is about delivering productive and life enhancing stories straight to the user’s digital device to be read anytime, anywhere.
+       
+        <br><br>
+        BookSpot was made for all those who like to have a wide vision and rise above horizon.A good book shapes your mind as they say and here at BookSpot we have many such marvelous books.
+        Any book that you like you can add it in your favourites list and recommend other readers too! Also if you like this app then recommend your dear ones too.
+        The app can be installed across different gadgets without any extra charges you can become our member and for monthly updatesin your mailbox and to enjoy reading all you have to is register yourselves!
+           </p>
+        </section>
+     </div>
+     <br>
+     <div class="end">
+     <section style="color: rgb(255, 240, 245);" id="end">
+        <h3 style="text-align: center">“Explore and Enjoy Reading at BookSpot!”</h3>
+    </section>
+</div>
+</body>
+<app-footer></app-footer>
