--- a/src/app/request-reset/request-reset.component.html
+++ b/src/app/request-reset/request-reset.component.html
@@ -19,7 +19,7 @@
                 
                
         
-                    <button type="submit" class="button" >Send OTP</button>
+                    <button type="submit" class="button" >Send Email</button>
         
                     
         
