--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
             <a [routerLink]="['/search']" [queryParams]="{ category: 'horror' }" class="genre-link">Horror</a>
         </div>
         <div class="genres" style="width: 38%;">
-            <a [routerLink]="['/search']" [queryParams]="{ category: 'action & adventure' }" class="genre-link">Action & Adventure</a>
+            <a [routerLink]="['/search']" [queryParams]="{ category: 'adventure' }" class="genre-link">Action & Adventure</a>
             <a [routerLink]="['/search']" [queryParams]="{ category: 'mystery' }" class="genre-link">Mystery</a>
             <a [routerLink]="['/search']" [queryParams]="{ category: 'thriller' }" class="genre-link">Thriller</a>
         </div>
