--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -63,7 +63,7 @@
                     </div>
                     <br><br>
                     <div class="form-group" style="text-align: right">
-                        <button class="btn btn-primary ">Register</button>
+                        <button class="btn btn-primary " [disabled] = "registerForm.invalid">Register</button>
                     </div>
             </form>
     </div>
