--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -46,25 +46,14 @@
     display:inline;
   }
   
-  .button {
+  .login {
     background-color: #9f1bc7;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
     width: 100%;
-    opacity: 0.9;
   }
-  .btn{
+  .sign-up {
     background-color: #1b90c7;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
     width: 100%;
-    opacity: 0.9;
-  
   }
   
