--- a/src/app/search-book/search-book.component.html
+++ b/src/app/search-book/search-book.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
     <app-header></app-header>
     <div class="row filters">
-        <form class="form-inline" style="width: 100%;margin: auto;padding: auto;">
+        <form class="form-inline" style="width: 90%;margin-left: 5%;">
         <div class="col-4 cat-select">
-            <mat-form-field appearance="fill" style="background-color: #f1f1f1;width: 80%;">
+            <mat-form-field appearance="fill" style="background-color: #f1f1f1;width: 80%;height: 50px;">
                 <mat-label>Select Category/Genres</mat-label>
                 <mat-select [(value)] = "category">
                     <mat-option *ngFor="let category of categoryList" [value]="category">
@@ -21,7 +21,7 @@
             <img src="../../assets/icon/search-solid.svg" class="icon_img"/>
         </div>
         <div class="col-2">
-            <button mat-raised-button color="accent" (click)="geFilteredBook()">Search</button>
+            <button mat-raised-button color="accent" (click)="geFilteredBook()">Search <i class="fa fa-search icon fa-1x" style="padding-bottom: 4%;"></i></button>
         </div>
         <div class="col-4 cat-select">
         </div>
@@ -32,13 +32,13 @@
             <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let book of categoryBooks">
                 <mat-card class="mat-elevation-z4" style="background-color: #ffcc00;">
                     <mat-card-header>
-                        <mat-card-title matTooltip="{{ book?.volumeInfo?.title }}">{{ book?.volumeInfo?.title?.length > 15 ? book?.volumeInfo?.title.substr(0, 15) + "..." : book?.volumeInfo?.title }}</mat-card-title>
-                        <mat-card-subtitle>{{ book?.volumeInfo?.authors[0] }}</mat-card-subtitle>
+                        <mat-card-title matTooltip = "{{ book?.volumeInfo?.title }}">{{ book?.volumeInfo?.title?.length > 15 ? book?.volumeInfo?.title.substr(0, 15) + "..." : book?.volumeInfo?.title }}</mat-card-title>
+                        <mat-card-subtitle matTooltip = {{book?.volumeInfo?.authors[0]}}>{{ book?.volumeInfo?.authors[0].length > 15 ? book?.volumeInfo?.authors[0].substr(0, 15) + "..." : book?.volumeInfo?.authors[0] }}</mat-card-subtitle>
                     </mat-card-header>
                     <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.volumeInfo?.industryIdentifiers[0].identifier }">
                         <img mat-card-image src="{{ book?.volumeInfo?.imageLinks?.thumbnail }}" alt="Book cover" height="250px">
                     </a>
-                    <mat-card-content>
+                    <mat-card-content *ngIf="isAuthenicate">
                         <p *ngIf="book?.volumeInfo?.description">
                             {{ book?.volumeInfo?.description.substr(0, 40) + "..." }} <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.volumeInfo?.industryIdentifiers[0].identifier }">Show more</a>
                         </p>
