--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,7 +28,7 @@
     display: block;
     text-align: right;
     width: 30%;
-    margin-left: 55%;
+    margin-left: 40%;
     font-size: 1rem;
 }
 .nav-item {
@@ -48,4 +48,17 @@
 }
 .nav-block-bar {
     display: inline-block;
+}
+.sub-menu:hover{
+    background-color: yellow;
+    color: black;
+}
+.mat-menu-content {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+.main-menu {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #b3b3b3;
 }
