--- a/src/app/search-book/search-book.component.html
+++ b/src/app/search-book/search-book.component.html
@@ -27,6 +27,7 @@
         </div>
     </form>
     </div>
+    <div class="qoute-bg-img"></div><!--ng-class="{'hidden':categoryBooks && categoryBooks.length > 0'}"-->
     <div class="content">
         <div fxLayout="row wrap" fxLayoutGap="16px grid">
             <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let book of categoryBooks">
