--- a/src/app/recommendation/recommendation.component.html
+++ b/src/app/recommendation/recommendation.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
 <app-header></app-header>
 <div class="content">
-    <h1 style="color: azure">Recommendations</h1>
+    <h1 style="color: azure; text-align: center;font-weight: bold; font-size: 2rem;">Recommendations</h1>
         <div fxLayout="row wrap" fxLayoutGap="16px grid">
           <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let book of recommendedBooks">
                 <mat-card class="mat-elevation-z4">
