--- a/src/app/search-book/search-book.component.css
+++ b/src/app/search-book/search-book.component.css
@@ -20,3 +20,14 @@
     text-align: center;
     vertical-align: left;
 }
+.qoute-bg-img {
+    width: 80%;
+    height: 200px;
+    margin-top: 0%;
+    margin-left: 13%;
+    background-image: url(../../assets/images/bgImage.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    opacity: 0.5;
+
+}
