--- a/src/app/recommendation/recommendation.component.html
+++ b/src/app/recommendation/recommendation.component.html
@@ -6,16 +6,16 @@
           <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let book of recommendedBooks">
                 <mat-card class="mat-elevation-z4">
                     <mat-card-header>
-                        <mat-card-title matTooltip="{{ book?.bookName }}">{{ book?.bookName.length > 25 ? book?.bookName.substr(0, 25) + "..." : book?.bookName }}
+                        <mat-card-title matTooltip="{{ book?.bookName }}">{{ book?.bookName.length > 15 ? book?.bookName.substr(0, 15) + "..." : book?.bookName }}
                         </mat-card-title>
-                    <mat-card-subtitle>{{ book?.authorName }}&nbsp;&nbsp;&nbsp;-recommended by {{book.username}}</mat-card-subtitle>
+                    <mat-card-subtitle>-recommended by {{ getCount(book?.isbn) }} users</mat-card-subtitle>
                 </mat-card-header>
                 <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.isbn }">
                     <img mat-card-image src="{{ book?.bookImg }}" alt="Book cover" height="250px">
                 </a>
                 <mat-card-content>
                     <p>
-                        {{ book?.bookDesc.substr(0, 55) + "..." }} <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.isbn }">Show more</a>
+                        {{ book?.bookDesc && book?.bookDesc.substr(0, 55) + "..." }} <a [routerLink]="['/view-book']" [queryParams]="{ isbn: book?.isbn }">Show more</a>
                     </p>
                 </mat-card-content>
             </mat-card>
