--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     max-width: auto;
     overflow: auto;
 }
+toast {
+    z-index: 7000;
+}
