--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -28,9 +28,8 @@
 
         <td >
            
-            <button class="btn btn-sm btn-warning">
-              <i class="fa fa-edit"></i>Edit</button>
-            <button class="btn btn-sm btn-danger"(click)="openDelete(contentDelete, user)">
+             
+            <button class="btn btn-sm btn-danger"(click)="onDelete(user)">
               <i class="fa fa-remove"></i>Delete</button>
           </td>
       </tr>
@@ -38,5 +37,4 @@
 
 
     </table>
-  </div>
-  <
+ </div>
